--- a/style/style.css
+++ b/style/style.css
@@ -1,124 +1,86 @@
-*	{
-	margin: 0;
-	padding: 0;
+body{
+	background: white;
 }
-
-
-footer {
-	clear: both;
-	background: linear-gradient(to right, #000000, #434343);
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	color: rgba(255, 255, 255, 0.747);
-	height: 50px;
-	text-align: center;
-	padding: 15px 0px 0px 0px;
-}
-
-
-
-/*CONTAINER*/
-.container {
-	width: auto;
-	height: 768px;	
-	margin:0 auto;
-}
-
-.container_text {
-	width: 50%;
-	height: auto;
-	text-align: left;
-	padding: 0px 0px 0px 25%;
-
-}
-
-/*INICIO DA EDIÇÃO DOS ICONES DE REDES SOCIAIS*/
-.midias_sociais {
-	position: absolute;
-	bottom: 50%;
-	right: 0;
-}
-
-.social {
-	width: 25%;
-	margin: auto;
-}
-
-#face {
-	height: 40px;
-	margin: 0%;
-	padding: 0%;
-
-
-
-}
-
-#insta	{
-	height: 40px;
-	margin: 0%;
-	padding: 0%;
-
-
-}
-
-#twit	{
-	height: 40px;
-	margin: 0%;
-	padding: 0%;
-
-
-
-}
-
-#whats	{
-	height: 40px;
-	margin: 0%;
-	padding: 0%;
-}
-
-/*FIM DA EDIÇÃO DOS ICONES DE REDES SOCIAIS*/
-
-
-
-
-/*PAINEIS LATERAIS DO SITE*/
-#div_esquerda {
-	float: left;
-	min-height: 589px;
-	width: 50%;
-	padding: 50px 0px 0px 0px;
-	background: linear-gradient(to right, #ec008c, #fc6767);
+#header{
+	border-radius: 5px 5px 5px 5px;
+	margin: 10px 0px 10px 0px;
+	padding: 10px 0px 0px 0px;
+	height: 80px;
+	width: 100%;
+	background: white;
+	box-shadow: 1px 0px 5px 0px;
 	/*parte da edição da fonte*/
 	font-family: 'Courier New', Courier, monospace;
 	text-align: center;
-	
-	color: white;
 	font-size: 24px;
 }
-#titulo_esquerda {
+#texto_1{
+	box-shadow: 2px 0px 5px 0px;
+	border-radius: 5px 5px 5px 5px;	
+	height: 390px;
+	width: 49%;
+	padding: 50px 0px 0px 0px;
+	float:left;
+	background: linear-gradient(to right, #ec008c, #fc6767);
+	/*parte da edição da fonte*/
+	color: white;
 	font-family: 'Courier New', Courier, monospace;
-	color: black;
-	font-size: 48px;
-	/*fim da parte da edição da fonte*/
+	text-align: center;
+	font-size: 24px;
+}
+.texto_1{
+	
 }
 
-#div_direita {
-	float: right;
-	min-height: 589px;
-	width: 50%;
+#texto_2{
+	box-shadow: 2px 0px 5px 0px;
+	border-radius: 5px 5px 5px 5px;
+	height: 390px;
+	width: 49%;
 	padding: 50px 0px 0px 0px;
+	float: right;
 	background: linear-gradient(to right, #4776e6, #8e54e9);
 	/*parte da edição da fonte*/
 	font-family: 'Courier New', Courier, monospace;
 	text-align: center;
-	
 	color: black;
 	font-size: 24px;
+
 }
 
-#titulo_direita {
-	font-family: 'Courier New', Courier, monospace;
-	color: white;
-	font-size: 48px;
-	padding: 0px 0px 50px 0px;
-	/*fim da parte da edição da fonte*/
+#footer{
+	clear: both;
+	padding: 20px 0px 0px 0px;
 }
+#texto_base {
+	border-radius: 5px 5px 5px 5px;
+	padding: 2px 0px 0px 0px;
+	height: 90px;
+	width: 100%;
+	background: white;
+	box-shadow: 1px 0px 5px 0px;
+	/*parte da edição da fonte*/
+	font-family: 'Courier New', Courier, monospace;
+	text-align: center;
+	font-size: 16px;
+
+
+}
+
+.midias_sociais {
+	float: right;
+	bottom: 50%;
+	right: 0;
+}
+/*Midias sociais*/
+.social {
+	margin: 10px;
+	border-spacing: 12px;
+	
+}
+#face, #insta, #twit, #whats {
+	height: 40px;
+	margin: 0%;
+	padding: 0%;
+}
+/*Fim da edição de mídias sociais*/
