--- a/style/style.css
+++ b/style/style.css
@@ -1,25 +1,30 @@
+*{
+	margin: 0px;
+	padding: 0px;
+}
 body{
-	background: white;
+	background: #fffafa;
 }
 #header{
-	border-radius: 5px 5px 5px 5px;
-	margin: 10px 0px 10px 0px;
+	border-radius: 0px 0px 5px 5px;
+	margin: 0px 0px 10px 0px;
 	padding: 10px 0px 0px 0px;
 	height: 80px;
 	width: 100%;
 	background: white;
-	box-shadow: 1px 0px 5px 0px;
+	box-shadow: 2px 3px 7px #aaaaaa;
 	/*parte da edição da fonte*/
 	font-family: 'Courier New', Courier, monospace;
 	text-align: center;
 	font-size: 24px;
 }
 #texto_1{
-	box-shadow: 2px 0px 5px 0px;
+	box-shadow: 2px 0px 5px 0px grey;
 	border-radius: 5px 5px 5px 5px;	
 	height: 390px;
 	width: 49%;
 	padding: 50px 0px 0px 0px;
+	margin: 6px 6px 6px 6px;
 	float:left;
 	background: linear-gradient(to right, #ec008c, #fc6767);
 	/*parte da edição da fonte*/
@@ -28,16 +33,14 @@ body{
 	text-align: center;
 	font-size: 24px;
 }
-.texto_1{
-	
-}
 
 #texto_2{
-	box-shadow: 2px 0px 5px 0px;
+	box-shadow: 2px 0px 5px 0px grey;
 	border-radius: 5px 5px 5px 5px;
 	height: 390px;
 	width: 49%;
 	padding: 50px 0px 0px 0px;
+	margin: 6px 6px 6px 6px;
 	float: right;
 	background: linear-gradient(to right, #4776e6, #8e54e9);
 	/*parte da edição da fonte*/
@@ -53,16 +56,16 @@ body{
 	padding: 20px 0px 0px 0px;
 }
 #texto_base {
-	border-radius: 5px 5px 5px 5px;
-	padding: 2px 0px 0px 0px;
-	height: 90px;
+	border-radius: 5px 5px 0px 0px;
+	padding: 0px 0px 0px 0px;
+	height: 120px;
 	width: 100%;
-	background: white;
-	box-shadow: 1px 0px 5px 0px;
+	background: #f5f5f5;
+	box-shadow: 0px 3px 7px 3px #aaaaaa;
 	/*parte da edição da fonte*/
 	font-family: 'Courier New', Courier, monospace;
-	text-align: center;
-	font-size: 16px;
+	text-align: left;
+	font-size: 12px;
 
 
 }
