--- a/style/style.css
+++ b/style/style.css
@@ -94,7 +94,7 @@ body{
 	border-spacing: 12px;
 	
 }
-#face, #insta, #twit, #whats {
+#face, #insta, #twit, #whats, #linkedin {
 	height: 40px;
 	margin: 0%;
 	padding: 0%;
