--- a/style/style.css
+++ b/style/style.css
@@ -90,12 +90,22 @@ body{
 }
 /*Midias sociais*/
 .social {
-	margin: 10px;
-	border-spacing: 12px;
+	width: 200px;
+	height: 50px;
+	line-height: 50px;
+	text-align:center;
+	background-color: rgba(10,23,55,0.7);
+	color: white;
 	
+	/* pura mágica */
+	position: absolute;
+	top: 50%; /* posiciona na metade da tela */
+	margin-top: -25px; /* e retrocede metade da altura */
+	left: 50%; /* posiciona na metade da tela */
+	margin-left: -100px; /* e retrocede metade da largura */
 }
 #face, #insta, #twit, #whats, #linkedin {
-	height: 40px;
+	height: 20px;
 	margin: 0%;
 	padding: 0%;
 }
