--- a/style/style.css
+++ b/style/style.css
@@ -68,7 +68,7 @@ body{
 	clear: both;
 	padding: 20px 0px 0px 0px;
 }
-#texto_base {
+#divFooter {
 	border-radius: 5px 5px 0px 0px;
 	padding: 0px 0px 0px 0px;
 	height: 120px;
@@ -83,13 +83,14 @@ body{
 
 }
 
-.midias_sociais {
+.divMidiaSociais {
 	float: right;
 	bottom: 50%;
 	right: 0;
 }
 /*Midias sociais*/
-.social {
+.tabelaMidiaSociais {
+	border-radius: 15px 30px;
 	width: 200px;
 	height: 50px;
 	line-height: 50px;
@@ -99,7 +100,7 @@ body{
 	
 	/* pura mágica */
 	position: absolute;
-	top: 50%; /* posiciona na metade da tela */
+	top: 100%; /* posiciona na metade da tela */
 	margin-top: -25px; /* e retrocede metade da altura */
 	left: 50%; /* posiciona na metade da tela */
 	margin-left: -100px; /* e retrocede metade da largura */
