--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -5,6 +5,7 @@ padding: 0px;
 }
 div.interface {
     background-color: #2b2b2b;
+    box-shadow: 1px 1px 6px #000000;
     margin: 0px auto 0px auto;
     width: 980px;
     height: 640px;
@@ -47,9 +48,7 @@ nav#menu {
     height: 75px;
     display:block;
     position: relative;
-    background-color: #e8e8e8;
-
-    
+    background-color: #e8e8e8;  
 }
 nav#menu ul{
 list-style: none;
@@ -66,3 +65,8 @@ nav#menu li{
     border-radius: 10px;
     height: 10px;
   }
+nav#menu li:hover {
+    background-color: white;
+    color: red;
+    box-shadow: 1 1 4px white;
+}
