--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,4 @@
 ﻿/*EDIÇÃO DE TAGS BÁSICAS*/
-*{margin: 0px;padding: 0px;}
 body {
 background-color: #898989;
 }
@@ -8,13 +7,13 @@ p{
 }
 /*INTERFACE DO SITE (DIV)*/
 div.interface {
-    background:
+    /*background:
     radial-gradient(black 15%, transparent 16%) 0 0,
     radial-gradient(black 15%, transparent 16%) 8px 8px,
     radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
     radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
     background-color:#181818;
-    background-size: 13px 13px;
+    background-size: 13px 13px;*/
     box-shadow: 1px 1px 6px #000000;
     margin: 0px auto 0px auto;
     width: 980px;
@@ -27,8 +26,6 @@ nav#menu {
     display:block;
     position: relative;
     background-color: #e8e8e8;
-    border-bottom: 1px red solid;
-
 }
 nav#menu ul{
 list-style: none;
@@ -55,7 +52,7 @@ hgroup#boas-vindas {
     background-color: black;
     margin: 20px auto 20px auto;
     height: auto;
-    width: 320px;
+    width: 500px;
     box-shadow: 1px 1px 8px black;
     border-radius: 6px;
     color: #f8f8f8;
