--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -11,7 +11,10 @@ header#cabecalho {
 }
 nav#menu {
     display: block; 
-    position: relative;
+    position: absolute;
+    top: 15px;
+    left: 500px;
+    
 }
 nav#menu ul {
     list-style: none;
@@ -20,7 +23,8 @@ nav#menu ul {
     margin: 0 auto 0 auto;
 }
 nav#menu li {
-    display: inline-table;
+    display: inline-block;
+    position: relative;
     padding: 15px;
     border-radius: 25px;
     box-shadow: 0px 0px 6px rgba(104, 103, 103, 0.452);
