--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,104 +1,3 @@
-﻿/*EDIÇÃO DE TAGS BÁSICAS*/
-*{margin: 0px;padding: 0px;}
-body {
-background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
-height: 400px;
-}
-p{
-    text-indent: 50px;
-}
-/*INTERFACE DO SITE (DIV)*/
-div.interface {
-    background:
-    radial-gradient(black 7.5%, transparent 4%) 0 0,
-    radial-gradient(black 7.5%, transparent 4%) 8px 8px,
-    radial-gradient(rgba(255,255,255,.1) 7.5%, transparent 20%) 0 1px,
-    radial-gradient(rgba(255,255,255,.1) 7.5%, transparent 20%) 8px 9px;
-    background-color:#eee;
-    background-size: 4px 4px;
-    box-shadow: 1px 1px 6px #000000;
-    margin: 0px auto 0px auto;
-    width: 980px;
-    min-height: 640px;
-}
+﻿/*@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
-
-/*BOTOES*/
-
-/*MENU DA PÁGINA*/
-nav#menu {
-    width: auto;
-    height: 75px;
-    display:block;
-    position: relative;
-background-color: white;
-}
-nav#menu ul{
-list-style: none;
-text-transform: uppercase;
-top: 0px;
-float: right;
-margin: 20px;
-}
-nav#menu li{
-    display: inline-block;
-    background-color: #f8f8f8;
-    padding: 10px;
-    border-radius: 10px;
-    height: 10px;
-  }
-nav#menu li:hover {
-    background-color: white;
-    color: red;
-    box-shadow: 1 1 4px white;
-}
-
-/* Colocando as colunas lado a lado */
-div.column {
-    float: left;
-    width: 25%;
-    padding: 0 10px;
-    position: relative;
-    left: 340px;
-    top: 100px;
-}
-/* Remove o espaçamento extra entre as linhas */
-div.row {margin: 0 -5px;}
-/* Limpa os espaços estre as linhas*/
-div.row:after{
-    content: "";
-    display: table;
-    clear: both;
-}
-/* Estilo dos cartões */
-div.card{
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
-padding: 16px;
-text-align: center;
-background-color: #ffffffce;
-border-radius: 5px;
-height: 200px;
-}
-
-
-/*TEXTO DE BOAS VINDAS
-hgroup#boas-vindas {
-    background: #000000;
-    margin: 20px auto 20px auto;
-    height: auto;
-    width: 320px;
-    box-shadow: 1px 1px 8px black;
-    border-radius: 6px;
-    color: #f8f8f8;
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-    top: 50px;
-    text-align: center;
-}
-hgroup#boas-vindas h1 {
-    color: white;
-    font-size: 48px;
-    font-family: OpenSans;
-    src: url("_fontes/Open_Sans/OpenSans-Regular.ttf")
-}
-*/
+font-family: 'Josefin Sans', sans-serif;*/
