--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,45 +1,1 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
-
-<<<<<<< HEAD
-
-font-family: 'Josefin Sans', sans-serif;
-=======
-font-family: 'Josefin Sans', sans-serif;*/
-=======
-﻿/*PÁGINA DE ESTILO CSS*/
-@charset UTF-8;
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Raleway&display=swap');
-/*TAGS BÁSICAS NÃO CONTÉM ID's OU DIV's*/
-body{
-    background-color: #121212;
-}
-
-
-/*PÁGINA DE ESTILO DO HEADER (MENU)*/
-
-
-
-
-
-
-/*FIM DA PÁGINA DE ESTILO DO HEADER (MENU)*/
-
-
-/*INÍCIO DA ESTILIZAÇÃO DA LOUZA DO SITE*/
-div#template {
-    border: 0.2px #080808 solid; border-radius: 20px;
-    box-shadow: 0px 0px 7px #141313de;
-    background-color: #ECF0F1;
-    width: 980px;
-    height: 400px;
-    margin: 50px auto 0 auto;
-    padding: 50px;
-}
-<<<<<<< HEAD
-/*FIM DA ESTILIZAÇÃO DA LOUZA DO SITE*/
-=======
-/*FIM DA EDIÇÃO DA INTERFACE*/
-/*----------------------------------------------------------------------*/
->>>>>>> 4c6ea8c57af2c8bd32fdedee1b8577bb8b71ec45
->>>>>>> 8af7950079b3dab8bab51d80e89d8e1496a1ff89
->>>>>>> e2ab163ecbe5dd1c2438cc965b0d5a6ba0158f28
+﻿
