--- a/_css/menu.css
+++ b/_css/menu.css
@@ -9,9 +9,9 @@ body {
     display: none;
 }
 header{
-    background-color: #e2e2e2;
+    background-color: #d4d4d456;
     border-bottom: .5px black;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, .2);
 }
 header label{
     color: rgba(128, 128, 128, 0.5);
