--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,1 +1,55 @@
-﻿
+﻿* {
+    margin: 0px;
+    padding: 0px;
+}
+
+
+nav#menu-navegacao {
+
+}
+#menu-navegacao li {
+
+    display: inline-flex;
+    color: black;
+}
+#menu-navegacao a {
+    text-decoration: none;
+}
+
+
+
+
+
+
+/*Estilização da caixa onde ficam os links para redes sociais.
+Aqui por enquanto nada novo, Aprenas importei os icones (no Fontawesome) defini em
+div.midias-socias as posições deles, cores e tamanhos.
+Adicionei um :hover para fazer o ícone aumentar quando o mouse passar por cima, e adicionei uma sombra azul junto.
+No ID #midias-socias li eu defini o display das linhas e o espaçamento entre elas. */
+div.midias-sociais {
+    position: absolute;
+    margin: -20px 200px auto 550px;
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.5);
+}
+div.midias-sociais a {
+    text-decoration: none;
+    transition: color 0.3s ease;
+    color: #2323237a;
+}
+div.midias-sociais a :hover {
+    box-shadow:
+    0px 1px #53a7ea,
+    0px 2px #53a7ea,
+    0px 3px #53a7ea;
+    /*-webkit-transform: translateX(-3px);
+    transform: translateX(-3px);*/
+    font-size: 25px;
+    color: #232323;
+    
+}
+#midias-sociais li {
+    display: inline-block;
+    padding: 7px;
+}
+/*Fim da estilização da barra de midias sociais*/
