--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,1 +1,5 @@
-﻿
+﻿body
+     {
+        background-image: repeating-linear-gradient(-45deg, rgba(255,255,255, 0.25), rgba(255,255,255, 0.25) 1px, transparent 1px, transparent 6px);
+        background-size: 4px 4px;
+    }
