--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -69,11 +69,10 @@ div.midias-sociais {
 }
 ul#midias-sociais {
     position: relative;
-    text-align: center;
+    text-align: left;
 }
 div.midias-sociais a {
     text-decoration: none;
-    transition: color 0.3s ease;
     color: #2323237a;
 }
 div.midias-sociais a :hover {
@@ -94,9 +93,25 @@ div.midias-sociais a :hover {
 /*Fim da estilização da barra de midias sociais*/
 
 
-#home, #contato, #sobre {
+#home, #contato, #sobre, #rodape {
     position: relative;
     top: 200px;
     width: 100%;
-    height: 100%;
+    height: 440px;
+    box-shadow: 1px 4px 7px rgba(0, 0, 0, 0.5),
+    1px 4px 7px rgba(0, 0, 0, 0.5);  
+    border-radius: 10px;
+}
+#home {
+    background-color: #000;
+    color: whitesmoke;
+}
+#contato {
+    background-color: #800000;
+}
+#sobre {
+    background-color: #2037e6;
+}
+#rodape {
+    background-color: #232323;
 }
