--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,3 +1,4 @@
+﻿@import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap');
 * {
     margin: 0px;
     padding: 0px;
@@ -28,23 +29,31 @@ div.wrapper{
     border-top: 0.5px solid rgba(95, 95, 95, 0.5);
 }
 div.wrapper p{
-    font-size: 16px;font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;font-family: 'Montserrat',Arial, Helvetica, sans-serif;
     margin: 10px;
+}
+div.wrapper h1, h2, h3, h4, h5, h6{
+    font-family: 'Raleway', sans-serif;
 }
 div.wrapper section{
     margin: 0 auto;
     width: 600px ;
+    position: relative;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.400);
-    transition: all 0.2s ease-in-out;
+    transition: all 0.6s ease-in-out;
 }
 div.wrapper section:hover{
+    top: -4px;
     border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
-
+    box-shadow:0 4px 3px #999;
 }
+
+
 
 /*Edição do header*/
 header#cabecalho{
+    font-family: 'Raleway', sans-serif;
+    text-shadow: 2px white;
     text-align: center;
     background-color: #000;
 }
@@ -66,10 +75,11 @@ div.card-box{
     height: 400px;
     background-color: #303030;
     color: white;
-    text-shadow: 0.3em rgba(0, 0, 0, 0.4);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
     margin-left: 50px;
 }
+div.card-box hgroup {
+    font-family: 'Montserrat',Arial, Helvetica, sans-serif;}
 div.card-box figure{
     height: 200px;
     width: 200px;
