--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -3,30 +3,53 @@
     margin: 0px;
     padding: 0px;
 }
-body {
-    /*
-background-color: #121212;
-*/
-background-color: #eee;
+body{
+    background-color: #212121;
 }
 div.container {
-    background-color: #26282b;
-    position: absolute;
-    top: 100px;
     display: flex;
+    background: rgb(66,66,66);
+    background: linear-gradient(90deg, rgba(66,66,66,1) 0%, rgba(48,48,48,1) 35%, rgba(33,33,33,1) 100%);
+    box-shadow: -10px 7px 6px rgba(0, 0, 0, 0.4),
+                -5px 3.5px 8px rgba(0, 0, 0, 0.4),
+                2.5px 1.75px 16px rgba(0, 0, 0, 0.4);
+
+    position: absolute;
+    width: 86%;
+    top: 44.5em;
 }
 div.theme{
-    position: relative;
-    background-color: #e2e2e2;    
+    box-sizing: border-box;
+    position: absolute;
+    width: 30%;
+    height: 40em;
+    top: -10em;
+    margin-left: .6em;
+    background-color: #222222;
+    box-shadow: -15px 7px 6px rgba(0, 0, 0, 0.4),
+    -7.5px 3.5px 8px rgba(0, 0, 0, 0.4),
+    3.75px 1.75px 32px rgba(0, 0, 0, 0.4);
+
+}
+div.bk_theme{
+    box-sizing: border-box;
+    position: absolute;
+    width: 30%;
+    height: 40em;
+    top: -7em;
+    margin-left: 2em;
+    background-color: #111111;
+    box-shadow: -8px 3.5px 5px rgba(0, 0, 0, 0.4),
+                -4px 1.75px 20px rgba(0, 0, 0, 0.4),
+                2px 0.75px 40px rgba(0, 0, 0, 0.4);
 }
 div.wrapper{
-    background-color: #eeeeee;
-    position: relative;
-    width: 700px;
-    min-height: 300px;
-    margin: 0px auto 0px 350px;
-    padding-top: 20px;
-    border-top: 0.5px solid rgba(95, 95, 95, 0.5);
+
+    width: 46.25em;
+    min-height: 18.75em;
+    margin: 0em auto 0em 21.875em;
+    padding-top: 1.25em;
+
 }
 div.wrapper p{
     font-size: 16px;font-family: 'Montserrat',Arial, Helvetica, sans-serif;
@@ -36,26 +59,33 @@ div.wrapper h1, h2, h3, h4, h5, h6{
     font-family: 'Raleway', sans-serif;
 }
 div.wrapper section{
+    top: 2em;
+    border-top: .2em solid rgba(95, 95, 95, 0.5);
+    box-sizing: border-box;
     margin: 0 auto;
     width: 600px ;
     position: relative;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.400);
     transition: all 0.6s ease-in-out;
 }
 div.wrapper section:hover{
-    top: -4px;
+    background-color: #212121;
+    color: white;
+    border-top: .005em solid rgba(95, 95, 95, 0.5);
+    top: 1.5em;
     border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;
-    box-shadow:0 4px 3px #999;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5),
+                0 2px 7.5px rgba(0, 0, 0, 0.4),
+                0 1px 3.75px rgba(0, 0, 0, 0.3);
 }
-
-
 
 /*Edição do header*/
 header#cabecalho{
+    top: 0px;
+    position: absolute;
+    width: 100%;
     font-family: 'Raleway', sans-serif;
-    text-shadow: 2px white;
     text-align: center;
-    background-color: #000;
+border-bottom: .09em solid #303030;    
 }
 header#cabecalho li{
     list-style: none;
@@ -70,22 +100,28 @@ header#cabecalho a{
 
 /*Edição do conteudo lateral*/
 div.card-box{
+    position: absolute;
     text-align: center;
-    width: 300px;
-    height: 400px;
+    width: 18.75em;
+    height: 25em;
+    top: -15%;
     background-color: #303030;
     color: white;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
-    margin-left: 50px;
+    box-shadow: -10px 7px 6px rgba(0, 0, 0, 0.4),
+                -5px 3.5px 8px rgba(0, 0, 0, 0.4),
+                2.5px 1.75px 16px rgba(0, 0, 0, 0.4);
+    margin-left: 3.125em;
 }
 div.card-box hgroup {
     font-family: 'Montserrat',Arial, Helvetica, sans-serif;}
 div.card-box figure{
-    height: 200px;
-    width: 200px;
+    height: 150px;
+    width: 150px;
     border-radius: 100%;
     margin: 0 auto;
-    box-shadow: 0px 2px 4px rgba(99, 99, 99, 0.4);
+    box-shadow: 0px 1.5px 10px #21212181,
+    0px 1px 20px #21212181,
+    0px .5px 25px #21212181;
 }
 div.card-box figcaption{
     display: none;
