--- a/_css/style.css
+++ b/_css/style.css
@@ -1,19 +1,15 @@
-    @import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap'); /*Fontes usadas no site*/
     /*Inicio da formatação de reset da página
     Aqui inicialmente foi zerada as propriedades de margem interna e externa do documento, e dito que o conteúdo não ultrapassasra as "bordas da tela"*/
-    *,*::after,*::before {
-        margin: 0;padding: 0;font-size: 100%;font-weight: 300;border: none;outline: none;font-family: 'Roboto', Helvetica, sans-serif;
-        -webkit-box-sizing:  border-box;
-            -mox-box-sizing: border-box;
-                box-sizing: border-box;
-    }
+    *,*::after,*::before {margin: 0;padding: 0;font-size: 100%;font-weight: 300;border: none;outline: none;-webkit-box-sizing:border-box;-mox-box-sizing:border-box;box-sizing: border-box;}
+    ul{list-style: none;}a{text-decoration: none;cursor: pointer;}
     /*Fim da formatação de reset da página*/
 
     /* 1. Edição do conteiner que irá englobar e ser o elemento "pai" do site, ele irá referenciar os outros elementos*/
 div.container {
+    font-family: 'Roboto', Helvetica, sans-serif;
     border: 1rem solid purple;
     width: 100%;
-    margin-top: 5rem;
+    margin-top: 8.5rem;
     margin-left: auto;
     margin-right: auto;
     padding: 0 1.250rem;
@@ -24,53 +20,34 @@ div.container {
             padding: 0;
         }
     }
+    /* 1.2 Inicio da edição das linhas que vão dentro do conteiner. O tamanho das linhas e seus alinhamentos são definidos aqui*/
+    div.row {margin-left: -5px;margin-right: -5px;}div.row::before, .row::after{content: "";display: table;}div.row::after{clear: both;}
+    /*Fim da edição das linhas internas do conteiner*/
+    
+    /* 1.3 Edição das colunas que vão dentro das linhas que vão dentro do conteiner do site*/
+        div.col {display: inline-block;vertical-align: top;min-height: 1px;padding-left: 5px;padding-right: 5px;width: 100%;margin-right: -4px;*zoom: 1;*display: inline;}
+        /* duas colonas */
+            @media (min-width: 480px) {
+                .col-2 {
+                    width: 50%;
+                }
+            }
+                /* tres colunas */
+                @media (min-width: 728px) {
+                    .col-3 {
+                        width: 33.3333%;
+                    }
+                }
+                    /* sidebar */
+                    @media (min-width: 992px) {
+                        .col-content {
+                            width: 60%;
+                        }
 
-div.row { /* 1.2 Inicio da edição das linhas que vão dentro do conteiner. O tamanho das linhas e seus alinhamentos são definidos aqui*/
-    margin-left: -5px;
-    margin-right: -5px;
-}
-div.row::before, .row::after{
-    content: "";
-    display: table;
-}
-div.row::after{
-    clear: both;
-}/*Fim da edição das linhas internas do conteiner*/
-div.col {/* 1.3 Edição das colunas que vão dentro das linhas que vão dentro do conteiner do site*/
-    display: inline-block; /*Tipo de display adotado no site (blocos em linha)*/
-    vertical-align: top;
-    min-height: 1px;
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 100%;
-    margin-right: -4px;
-    *zoom: 1;
-    *display: inline;
-}
-    /* duas colonas */
-    @media (min-width: 480px) {
-        .col-2 {
-            width: 50%;
-        }
-    }
-
-    /* tres colunas */
-    @media (min-width: 728px) {
-        .col-3 {
-            width: 33.3333%;
-        }
-    }
-
-    /* sidebar */
-    @media (min-width: 992px) {
-        .col-content {
-            width: 60%;
-        }
-
-        .col-sidebar {
-        width: 40%;
-        }
-    }
+                        .col-sidebar {
+                        width: 40%;
+                        }
+                    }
     /*Fim da edição das colunas que vão dentro das linhas que vão dentro do conteiner do site*/
     /*Fim da edição do conteiner*/
 
@@ -83,23 +60,100 @@ h1, h2, h3
                 h3 {font-size: 1.5rem;color: #011627;}
 
 
-header.cabecalho{
+/*Edição do cabeçalho da página*/
+.cabecalho__header{
     position: absolute;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    padding: 0.5rem 1rem;
     left: 0;
     top: 0;
     min-height:5rem;
-    width: 100%;
-    padding: 0 2rem 0 2rem;
-    border: 5px solid blue;
+    width: 100%;}
+.cabecalho__main-menu > ul{
+    display: flex;
 }
-header.cabecalho > img {
-    max-width: 100%;
-    height: 3.5rem;
+    .cabecalho__main-menu > ul li {
+        font-family: 'Montserrat', Helvetica, sans-serif;
+        font-weight: 900;
+        text-shadow: 0 0 1px black;
+        margin: 0 15px;
+        height: 2rem;width: 5rem;
+        display: flex;text-align: center;
+    }
+        .cabecalho__main-menu li a:hover::after{
+            content: "";
+            display: block;
+            background-color:#4285f4;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+            height: 4px;
+            width: 100%;
+            z-index: -1;
+            margin-top: 0.5rem;
+        }
+            .cabecalho__main-menu li:first-child{
+                margin-left: 0;
+            } 
+                .cabecalho__main-menu li:last-child{
+                margin-right: 0;
+                } 
+                @media (max-width: 700px){
+                    .cabecalho__header{
+                        flex-direction: column;
+                }
+                        .cabecalho__img-user{
+                        margin-bottom: 15px;}
+                    }
+                            .cabecalho__header > nav a{
+                        opacity: 0.6;
+                        color: black;
+                        padding: 0.5rem;width: 5rem;
+                        }
+                                .cabecalho__header > nav a:hover{
+                        opacity: 1;
+                            }
+.cabecalho__img-user{
+        width: 3.5rem;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.295), 2px 2px 6px rgba(255, 255, 255, 0.5);           
 }
-/*header.cabecalho + li*/
+/*Fim da edição do cabeçalho da página*/
+
+/*Início da edição da section hero da página*/
+.hero__section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url(../_images/Coding.png);background-size: cover;
+    min-height: 100vh;
+    width: 55%;
+}
+    .hero__section::after{
+        content: "";
+        position: absolute;
+        left: 15%;
+        background-image: linear-gradient(to right top, #4285f4, #367ef7, #2978fa, #1c70fd, #0e69ff);
+        min-height: 100vh;
+        width: 50%;
+        display: block;
+        z-index: -1;
+    }
+.hero__section .btn{
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.205),
+                0 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px 50px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: 1.2rem;
+}
+
+
+
+/*Fim da edição da section hero da página*/
