--- a/_css/style.css
+++ b/_css/style.css
@@ -153,7 +153,11 @@ h1, h2, h3
     font-weight: 900;
     font-size: 1.2rem;
 }
-
-
-
 /*Fim da edição da section hero da página*/
+
+
+
+/*Edição da página SOBRE*/
+.sobre {
+    display: flex;flex-direction: column;align-items: center;padding: 100px 50px;
+}
